@@ -8,6 +8,14 @@ BinDir=${BinDir:-.}
 ExeExt=${ExeExt:-}
 _omfonts=$BinDir/omfonts$ExeExt
 
+# pre-generated test results in the repository are stored in LF
+# but the output might be written in CRLF on some platform.
+# if 'diff --strip-trailing-cr' is available, exploit it.
+# (useful for tests on win32 binaries run on MSYS shell)
+DIFF="diff"
+$DIFF --strip-trailing-cr $0 $0 \
+  && DIFF="diff --strip-trailing-cr" || echo
+
 tests=tests
 
 test -d $tests || mkdir -p $tests
@@ -35,6 +43,6 @@ $_omfonts -ovp2ovf -verbose $srcdir/$tests/sample.ovp $tests/sample2.ovf || rc=8
 
 $_omfonts -ovf2ovp -verbose $tests/sample2 sample2 >$tests/xsample2.out || rc=9
 
-diff $srcdir/$tests/sample.out $tests/xsample2.out || rc=10
+$DIFF $srcdir/$tests/sample.out $tests/xsample2.out || rc=10
 
 exit $rc
