@@ -1,3 +1,7 @@
+2023-09-03  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* {check,repeat,selectfont}.test: Update tests for Windows.
+
 2023-08-26  Karl Berry  <karl@freefriends.org>
 
 	* ligkern.test: protect against $rc being defined in the environment.
